fix header: styling to fit responsive on mobile not too messy

--- a/src/Components/Header/index.css
+++ b/src/Components/Header/index.css
@@ -1,6 +1,6 @@
 .header-root {
   padding: 0 34px;
-  min-height: 64px;
+  height: 64px;
   background: #FFFFFF 0% 0% no-repeat padding-box;
   box-shadow: 0px 3px 6px #00000029;
   z-index: 2;
@@ -11,11 +11,14 @@
 }
 
 .header-root .header-item {
-  margin: 10px 0;
+  margin-left: 15px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 .header-root .logo-advotics {
-  margin: 0 10px;
+  margin: 0 5px;
 }
 
 .header-root .logo-advotics.big {
@@ -38,11 +41,59 @@
   height: 15px;
 }
 
+.header-root p.poweredby {
+  font-size: 11px;
+  color: #5b5b5b;
+  margin: 0;
+}
+
+.header-root p.username {
+  font-size: 14px;
+  font-weight: 600;
+  color: #727272;
+}
+
+.header-root p.company-name {
+  font-size: 10px;
+  font-weight: 300;
+  color: #727272;
+}
+
 @media only screen and (max-width: 768px) {
   .header-root {
-    padding: 10px;
-    flex-direction: column;
-    justify-content: space-between;
-    align-items: center;
+    padding: 15px 10px;
+    height: auto;
+  }
+
+  .header-root .logo-advotics.big {
+    width: 75px;
+    height: auto;
+  }
+  
+  .header-root .logo-advotics.small {
+    width: 40px;
+    height: auto;
+  }
+  
+  .header-root .icon-profile {
+    width: 20px;
+    height: auto;
+  }
+  
+  .header-root .icon-logout { 
+    width: 14px;
+    height: auto;
+  }
+
+  .header-root p.poweredby {
+    font-size: 10px;
+  }
+  
+  .header-root p.username {
+    font-size: 12px;
+  }
+  
+  .header-root p.company-name {
+    font-size: 10px;
   }
 }
